--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "formik-chakra-ui": "^1.6.1",
     "framer-motion": "^10.12.6",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.11.0"
